--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -114,7 +114,7 @@ layout: default
 				<div class="row mt-5">
 					<div class="col-md-2 align-self-center">
                          {% if author.avatar %}
-                        <img class="rounded-circle" src="{{site.baseurl}}/{{author.avatar}}" alt="{{author.name}}" width="90"/>
+                        <img class="rounded-circle" src="https://kchain.one/{{author.avatar}}" alt="{{author.name}}" width="90"/>
                         {% endif %} 
 					</div>
 					<div class="col-md-10">		
@@ -125,10 +125,7 @@ layout: default
                 {% endif %}
             
             <!-- Comments -->
-            {% if page.comments != false %}
-                {% include comments.html %}
-            {% endif %}
-            
+
 		</div>
         
         
