--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -205,7 +205,7 @@ a.text-dark:hover {
 .navbar-brand {
 	margin-right:2rem;
 	font-size:1.55rem;
-    font-family:"Georgia","Times New Roman",serif;
+    font-family:"PingFangSC-light","Helvetica Neue","Microsoft YaHei",Optima-Regular, PingFangTC-light,"Georgia","Times New Roman",serif;
 }
 .dropdown-item {
 	font-weight:400;
@@ -297,7 +297,7 @@ a.text-dark:hover {
 		right:0;
 	}
     .jumbotron-home h1 {
-        font-family: Georgia,Times,"Times New Roman",serif;
+        font-family: "PingFangSC-light","Helvetica Neue","Microsoft YaHei",Optima-Regular, PingFangTC-light,Georgia,Times,"Times New Roman",serif;
         font-size: 2.4rem;
         font-weight: 700;
         line-height: 1.1;
@@ -657,7 +657,7 @@ article {
     font-family:Lora;
 }
 .article-headline {
-    font-family: Georgia,Times,"Times New Roman",serif;
+    font-family: "PingFangSC-light","Helvetica Neue","Microsoft YaHei",Optima-Regular, PingFangTC-light,Georgia,Times,"Times New Roman",serif;
     font-size: 3.2rem;
     font-weight: 400;
     line-height: 1.15;
