--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -657,8 +657,8 @@ article {
     font-family:Lora;
 }
 .article-headline {
-    font-family: "PingFangSC-light","Helvetica Neue","Microsoft YaHei",Optima-Regular, PingFangTC-light,Georgia,Times,"Times New Roman",serif;
-    font-size: 3.2rem;
+/*    font-family: "PingFangSC-light","Helvetica Neue","Microsoft YaHei",Optima-Regular, PingFangTC-light,Georgia,Times,"Times New Roman",serif;
+*/    font-size: 3.2rem;
     font-weight: 400;
     line-height: 1.15;
     color: #222222;
