--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -654,7 +654,7 @@ footer {
 article {
 	font-size:20px;
 	line-height:1.86;
-    font-family:Lora;
+/*    font-family:Lora;*/
 }
 .article-headline {
 /*    font-family: "PingFangSC-light","Helvetica Neue","Microsoft YaHei",Optima-Regular, PingFangTC-light,Georgia,Times,"Times New Roman",serif;
