--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3300,15 +3300,17 @@ input[type="button"].btn-block {
 
 .navbar-brand {
   display: inline-block;
-  padding-top: 0.68rem;
-  padding-bottom: 0.68rem;
+/*  padding-top: 0.68rem;
+  padding-bottom: 0.68rem;*/
   margin-right: 1rem;
   font-size: 1.15rem;
   line-height: inherit;
   white-space: nowrap; }
   .navbar-brand:hover, .navbar-brand:focus {
     text-decoration: none; }
-
+.navbar-brand.img{
+    max-width: 150px;
+}
 .navbar-nav {
   display: flex;
   flex-direction: column;
