--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -40,7 +40,7 @@
   --breakpoint-md: 768px;
   --breakpoint-lg: 992px;
   --breakpoint-xl: 1200px;
-  --font-family-sans-serif: "PingFangSC-light","Helvetica Neue","Microsoft YaHei",Optima-Regular, PingFangTC-light,"Segoe UI", "Helvetica Neue", "Arial";
+  --font-family-sans-serif: "Segoe UI", "Helvetica Neue", "Arial";
   --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace; }
 
 *,
@@ -64,7 +64,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 
 body {
   margin: 0;
-  font-family:"PingFangSC-light","Helvetica Neue","Microsoft YaHei",Optima-Regular, PingFangTC-light, "Segoe UI", "Helvetica Neue", "Arial";
+  font-family: "Segoe UI", "Helvetica Neue", "Arial";
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.6;
@@ -3300,17 +3300,15 @@ input[type="button"].btn-block {
 
 .navbar-brand {
   display: inline-block;
-/*  padding-top: 0.68rem;
-  padding-bottom: 0.68rem;*/
+  padding-top: 0.68rem;
+  padding-bottom: 0.68rem;
   margin-right: 1rem;
   font-size: 1.15rem;
   line-height: inherit;
   white-space: nowrap; }
   .navbar-brand:hover, .navbar-brand:focus {
     text-decoration: none; }
-.navbar-brand img{
-    max-width: 120px;
-}
+
 .navbar-nav {
   display: flex;
   flex-direction: column;
