--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -237,7 +237,7 @@ a.text-dark:hover {
 	color:rgba(0,0,0,0.9);
 }
 .navbar-light .navbar-nav .nav-link {
-	color:rgba(0,0,0,0.5);
+	color:rgba(0,0,0,0.7);
 	font-size: .93rem;
 }
 .navbar-light .navbar-nav .nav-link:hover,.navbar-light .navbar-nav .nav-link:focus {
@@ -250,14 +250,14 @@ a.text-dark:hover {
 	color:rgba(0,0,0,0.9);
 }
 .navbar-light .navbar-toggler {
-	color:rgba(0,0,0,0.5);
+	color:rgba(0,0,0,0.7);
 	border-color:rgba(0,0,0,0.1);
 }
 .navbar-light .navbar-toggler-icon {
 	background-image:url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(0,0,0,0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
 }
 .navbar-light .navbar-text {
-	color:rgba(0,0,0,0.5);
+	color:rgba(0,0,0,0.7);
 }
 .navbar-light .navbar-text a {
 	color:rgba(0,0,0,0.9);
@@ -806,4 +806,21 @@ div.a2a_full_footer {display:none;}
 		 height:280px !Important;
 	 }
  }
- 
+
+ /*customize*/
+ .navbar-brand img{
+    max-width:120px;
+ }
+ h1, h2, h3, h4, h5, h6,
+ article h1, article h2, article h3, article h4, article h5, article h6, article .h1, article .h2, article .h3, article .h4, article .h5, article .h6
+ {
+    font-weight:400;
+ }
+ .font-weight-bold {
+    font-weight: 500 !important;
+ }
+article blockquote{
+    font-style: normal;
+    border-left: 4px solid #ff0000/*rgb(58, 213, 45); */;
+    padding: 0 2em;
+}
