--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -110,7 +110,8 @@ layout: default
             
             
              <!-- Author Box -->
-                {% if page.author and page.author != kfriends %}
+                {% if page.author %}
+					{% if page.author != kfriends %}
 				<div class="row mt-5">
 					<div class="col-md-2 align-self-center">
                          {% if author.avatar %}
@@ -121,7 +122,8 @@ layout: default
                         <h5 class="font-weight-bold"> {{ author.name }} <!--{% if author.twitter %}<span><a target="_blank" href="{{ author.twitter }}" class="btn btn-outline-success btn-sm btn-round ml-2">Follow</a></span>{% endif %}--></h5>
 						{{ author.bio }}					
 					</div>
-				</div>				
+				</div>
+				    {% endif %}
                 {% endif %}
             
             <!-- Comments -->
