--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -111,7 +111,7 @@ layout: default
             
              <!-- Author Box -->
                 {% if page.author %}
-					{% if page.author != kfriends %}
+					{% if page.author != "kfriends" %}
 				<div class="row mt-5">
 					<div class="col-md-2 align-self-center">
                          {% if author.avatar %}
