--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -830,3 +830,8 @@ article h2 {
     margin-top: 5rem;
     margin-bottom: 3rem;
 }
+@media (max-width:991.98px) {
+    .col-md-4.lastest_post_imgbox {
+        max-width: 150px;
+    }
+}
