--- a/_includes/menu-header.html
+++ b/_includes/menu-header.html
@@ -7,6 +7,9 @@
 <a class="nav-link" href="{{site.baseurl}}/primer.html">超入门</a>
 </li>
 <li class="nav-item">
+<a class="nav-link" href="{{site.baseurl}}/block100.html">区块链技术图解</a>
+</li>
+<li class="nav-item">
 <a class="nav-link" href="{{site.baseurl}}/authors-list.html">Authors</a>
 </li>
 <li class="nav-item">
