--- a/_includes/menu-header.html
+++ b/_includes/menu-header.html
@@ -1,14 +1,15 @@
 <!--  Replace menu links here -->
 
 <li class="nav-item">
-<a class="nav-link" href="{{site.baseurl}}/index.html">Home</a>
+<a class="nav-link" href="{{site.baseurl}}/index.html">首页 Home</a>
 </li>
 <li class="nav-item">
-<a class="nav-link" href="{{site.baseurl}}/primer.html">超入门</a>
+<a class="nav-link" href="{{site.baseurl}}/primer.html">区块链超入门</a>
 </li>
 <li class="nav-item">
 <a class="nav-link" href="{{site.baseurl}}/block100.html">区块链技术图解</a>
 </li>
+<!--
 <li class="nav-item">
 <a class="nav-link" href="{{site.baseurl}}/authors-list.html">Authors</a>
 </li>
@@ -18,5 +19,5 @@
 <li class="nav-item">
 <a target="_blank" class="nav-link" href="https://www.wowthemes.net/themes/mundana-wordpress/">WP</a>
 </li>
-
+-->
 
