--- a/_includes/menu-header.html
+++ b/_includes/menu-header.html
@@ -1,7 +1,7 @@
 <!--  Replace menu links here -->
 
 <li class="nav-item">
-<a class="nav-link" href="{{site.baseurl}}/index.html">首页 Home</a>
+<a class="nav-link" href="{{site.baseurl}}/index.html">首页</a>
 </li>
 <li class="nav-item">
 <a class="nav-link" href="{{site.baseurl}}/primer.html">区块链超入门</a>
