--- a/_includes/menu-header.html
+++ b/_includes/menu-header.html
@@ -10,7 +10,7 @@
 <a class="nav-link" href="{{site.baseurl}}/block100.html">区块链应用场景</a>
 </li>
 <li class="nav-item">
-<a class="nav-link" href="{{site.baseurl}}/block100.html">智能合约开发指南</a>
+<a class="nav-link" href="{{site.baseurl}}/contracts.html">智能合约开发指南</a>
 </li>
 <li class="nav-item">
     <a class="nav-link" href="{{site.baseurl}}/thinking.html">区块链思维</a>
