--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -829,6 +829,9 @@ article blockquote{
 article h2 {
     margin-top: 5rem;
     margin-bottom: 3rem;
+/*h2 title*/
+	border-bottom: 6px solid #dd0000;
+	padding-bottom: 20px;
 }
 @media (max-width:991.98px) {
     .col-md-4.lastest_post_imgbox {
