--- a/_includes/menu-header.html
+++ b/_includes/menu-header.html
@@ -7,7 +7,7 @@
 <a class="nav-link" href="{{site.baseurl}}/primer.html">区块链超入门</a>
 </li>
 <li class="nav-item">
-<a class="nav-link" href="{{site.baseurl}}/block100.html">区块链应用场景</a>
+<a class="nav-link" href="{{site.baseurl}}/block100.html">区块链应用场景100</a>
 </li>
 <li class="nav-item">
 <a class="nav-link" href="{{site.baseurl}}/contracts.html">智能合约开发指南</a>
