--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,7 +19,7 @@ layout: default
                         {% if author.avatar %}
                         <!--img class="rounded-circle" src="{{site.baseurl}}/{{author.avatar}}" alt="{{author.name}}" width="70"/-->
 
-                        <img class="rounded-circle" src="https://kchain.one/{{{author.avatar}}" alt="{{author.name}}" width="50"/>
+                        <img class="rounded-circle" src="https://kknow.cn/{{{author.avatar}}" alt="{{author.name}}" width="50"/>
                         {% endif %}
 						<small class="ml-3"> {{ author.name }} <span><!--a target="_blank" href="{{ author.twitter }}" class="btn btn-outline-success btn-sm btn-round ml-1">Follow</a--></span>
                             <span class="text-muted d-block mt-1">{{ page.date | date: '%Y.%m.%d' }} </span>
@@ -115,7 +115,7 @@ layout: default
 				<div class="row mt-5">
 					<div class="col-md-2 align-self-center">
                          {% if author.avatar %}
-                        <img class="rounded-circle" src="https://kchain.one/{{author.avatar}}" alt="{{author.name}}" width="90"/>
+                        <img class="rounded-circle" src="https://kknow.cn/{{author.avatar}}" alt="{{author.name}}" width="90"/>
                         {% endif %} 
 					</div>
 					<div class="col-md-10">		
