--- a/_includes/menu-header.html
+++ b/_includes/menu-header.html
@@ -13,7 +13,7 @@
 <a class="nav-link" href="{{site.baseurl}}/contracts.html">智能合约开发指南</a>
 </li>
 <li class="nav-item">
-    <a class="nav-link" href="{{site.baseurl}}/thinking.html">区块链思维</a>
+    <a class="nav-link" href="{{site.baseurl}}/101blockchain.html">区块链宝典 101</a>
 </li>
 <!--
 <li class="nav-item">
