--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -78,7 +78,7 @@
         <div class="container">
         <div class="row align-items-center justify-content-between">
             <div>
-                <span class="navbar-brand mr-2 mb-0"><span class="footer-sitename"><strong>快知区块链 KChain</strong></span></span>
+                <span class="navbar-brand mr-2 mb-0"><span class="footer-sitename"><strong>快知区块链 KKNOW.cn</strong></span></span>
                 <span>Copyright © <script>document.write(new Date().getFullYear())</script>.</span>
 
             </div>
